set zh-cn as the default language

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,6 @@
 baseURL = "https://www.lyseo.cf"
+defaultContentLanguage = "zh-cn"
+defaultContentLanguageInSubdir = true
 disableLanguages = ["en"]
 disqusShortname = ""
 paginate = "6"
